--- a/assets/styles/src/modules/_major-minor.scss
+++ b/assets/styles/src/modules/_major-minor.scss
@@ -15,13 +15,30 @@
 }
 
 
-.major-minor {
+div.major-minor {
     height: 130px;
     margin-bottom: .5rem;
     overflow: hidden;
     transition-duration: .3s;
     position: relative;
     background-color: #fff;
+
+    &:nth-of-type(4n+1) {
+        margin-right: .74rem;
+    }
+
+    @media print {
+        page-break-inside: avoid;
+        display: inline-block;
+        width: 49%;
+        @include rem('margin-right', .3)
+    }
+
+    @include min-width ( $iPadLandscape ) {
+        display: inline-block;
+        width: calc(50% - .5rem);
+    }
+
     &:not(.unit-color) {
         border: 1px solid #eee;
         border-left: none;
@@ -166,19 +183,6 @@
             }
 
         }
-    }
-
-    @media print {
-        page-break-inside: avoid;
-        display: inline-block;
-        width: 49%;
-        @include rem('margin-right', .3)
-    }
-
-    @include min-width ( $iPadLandscape ) {
-        display: inline-block;
-        width: 49%;
-        @include rem('margin-right', .3)
     }
 
 }
